tests/ui/form_data_deserialize.stderr
error[E0277]: the trait bound `for<'de> MyFormData: serde::de::Deserialize<'de>` is not satisfied
  --> $DIR/form_data_deserialize.rs:4:8
   |
4  | struct MyFormData {
   |        ^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `MyFormData`
   |
  ::: $WORKSPACE/src/internal.rs
   |
   | pub async fn parse_urlencoded<T: DeserializeOwned>(body: Body) -> Result<T, Error> {
   |                                  ---------------- required by this bound in `gotham_formdata::internal::parse_urlencoded`
   |
   = note: required because of the requirements on the impl of `serde::de::DeserializeOwned` for `MyFormData`
