tests/ui/form_data_deserialize.rs
use gotham_formdata::FormData;

#[derive(FormData)]
struct MyFormData {
	foo: String
}

fn main() {
}
